<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2013 Nicolas Morel
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.github.nmorel.gwtjackson</groupId>
  <artifactId>gwt-jackson-parent</artifactId>
  <version>0.15.5-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>gwt-jackson</module>
    <module>extensions</module>
    <module>examples</module>
  </modules>

  <name>gwt-jackson :: Parent</name>
  <description>gwt-jackson is a GWT JSON serializer/deserializer mechanism based on Jackson annotations</description>
  <url>https://github.com/nmorel/gwt-jackson</url>

  <licenses>
    <license>
      <name>The Apache Software License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <scm>
    <connection>scm:git:https://github.com/nmorel/gwt-jackson.git</connection>
    <developerConnection>scm:git:https://github.com/nmorel/gwt-jackson.git</developerConnection>
    <url>https://github.com/nmorel/gwt-jackson</url>
    <tag>HEAD</tag>
  </scm>

  <developers>
    <developer>
      <id>nmr.morel</id>
      <name>Nicolas Morel</name>
      <email>nmr.morel@gmail.com</email>
      <roles>
        <role>developer</role>
      </roles>
      <timezone>+1</timezone>
    </developer>
  </developers>

  <issueManagement>
    <system>GitHub</system>
    <url>https://github.com/nmorel/gwt-jackson/issues</url>
  </issueManagement>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.release>17</maven.compiler.release>

    <!-- Plugins version -->
    <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
    <maven-site-plugin.version>4.0.0</maven-site-plugin.version>
    <maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
    <maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
    <maven-deploy-plugin.version>3.1.3</maven-deploy-plugin.version>
    <maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
    <gwt-maven-plugin.version>1.2.0</gwt-maven-plugin.version>

    <!-- Dependencies version -->
    <gwt.version>2.13.0</gwt.version>
    <jackson-annotations.version>2.21</jackson-annotations.version>
    <jackson-databind.version>2.21.1</jackson-databind.version>
    <javapoet.version>1.13.0</javapoet.version>
    <junit-jupiter.version>6.0.2</junit-jupiter.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- GWT dependencies -->
      <dependency>
        <groupId>org.gwtproject</groupId>
        <artifactId>gwt-user</artifactId>
        <version>${gwt.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.gwtproject</groupId>
        <artifactId>gwt-dev</artifactId>
        <version>${gwt.version}</version>
        <scope>provided</scope>
      </dependency>

      <!-- Jackson dependencies -->
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson-annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-annotations</artifactId>
        <version>${jackson-annotations.version}</version>
        <classifier>sources</classifier>
      </dependency>
      <dependency>
        <groupId>com.fasterxml.jackson.core</groupId>
        <artifactId>jackson-databind</artifactId>
        <version>${jackson-databind.version}</version>
      </dependency>

      <!-- Generator dependencies -->
      <dependency>
        <groupId>com.squareup</groupId>
        <artifactId>javapoet</artifactId>
        <version>${javapoet.version}</version>
      </dependency>

      <!-- Test dependencies -->
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit-jupiter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>${maven-resources-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>${maven-site-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${maven-surefire-plugin.version}</version>
          <configuration>
            <!--Only required due to a GWT DateTimeFormat issue see https://github.com/gwtproject/gwt/issues/8259-->
            <argLine>-Duser.timezone=UTC --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven-deploy-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>

        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>${maven-javadoc-plugin.version}</version>
          <configuration>
            <failOnError>false</failOnError>
            <doclint>none</doclint>
          </configuration>
        </plugin>

        <plugin>
          <groupId>net.ltgt.gwt.maven</groupId>
          <artifactId>gwt-maven-plugin</artifactId>
          <version>${gwt-maven-plugin.version}</version>
          <extensions>true</extensions>
          <configuration>
            <sourceLevel>17</sourceLevel>
            <!--Only required due to a GWT DateTimeFormat issue see https://github.com/gwtproject/gwt/issues/8259-->
            <jvmArgs>
              <arg>-Duser.timezone=UTC</arg>
              <arg>--add-opens</arg><arg>java.base/java.lang=ALL-UNNAMED</arg>
              <arg>--add-opens</arg><arg>java.base/java.io=ALL-UNNAMED</arg>
              <arg>--add-opens</arg><arg>java.base/java.util=ALL-UNNAMED</arg>
              <arg>--add-opens</arg><arg>java.base/java.lang.reflect=ALL-UNNAMED</arg>
            </jvmArgs>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <phase>prepare-package</phase>
            <goals>
              <goal>javadoc</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

</project>
